# clone-mgr

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  dockerfile-dev  pyproject.toml
clone_status/: app.py
clone_status/flask_app/: __init__.py  app.db  config.py  models.py  utils_esi_auth.py
clone_status/flask_app/connector_login/: routes_login.py
clone_status/flask_app/esi_character/: routes_character_details.py  routes_misc.py
clone_status/flask_app/static/css/: mystyles.css
clone_status/flask_app/static/sass/: eve.scss  mystyles.scss
clone_status/flask_app/templates/: clone_status.html
clone_status/migrations/versions/: 3745f085ac16_add_public_market_etags.py  ddfdeb757929_add_etag_table.py
